added bootstrap to header

--- a/index.html
+++ b/index.html
@@ -1,20 +1,50 @@
 <html>
+
+<head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <title>Joe Pasquale - GitHub.io</title>
+
     <style>
 
     </style>
-    <script>
-        
-    </script>
-    <body>
-        <h1>Joe Pasquale</h1>
-        <img src = "https://scontent.fbed1-2.fna.fbcdn.net/v/t1.0-9/64684687_2333630296895861_5872444732973514752_n.jpg?_nc_cat=102&_nc_sid=85a577&_nc_ohc=pgLUNvQ2xSsAX-pPIC6&_nc_ht=scontent.fbed1-2.fna&oh=2810edfff1773fb528360ce34c6e0bc2&oe=5E8F0331" alt = "A picture of me">
-        <h2>Student at University of Massachusetts Amherst || Computer Science and Economics</h2>
-        <h3><a href = "https://www.linkedin.com/in/jpasquale1" target = "_blank">LinkedIn</a> || <a href = "https://github.com/joepasquale" target = "_blank">GitHub</a></h3>
-        <p>I am currently a Junior-Year Computer Science and Economics student at the University of Massachusetts Amherst. I have taken numerous courses such as Algorithm Analysis, Human-Computer Interaction, Web Programming, Data Science, Database Management, and many others.
-            <br>While I'm at school, I'm a brother of the Gamma Delta Chapter of Kappa Sigma. I currently sit on the executive committee. You can learn more about us <a href = "https://www.umasskappasig.com" target = "_blank">here</a>. I'm also involved in the UMass Dance Marathon for Baystate Children's Hosptial. You can find my DonorDrive <a href = "https://events.dancemarathon.com/index.cfm?fuseaction=donorDrive.participant&participantID=614332" >here</a><div class=""></div>
-            <br>If you're interested in asking me a question or contacting me, fill out the form below.
-        </p>
-    </body>
-</html> 
+
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+</head>
+
+<body>
+    <h1>Joe Pasquale</h1>
+    <img src="https://scontent.fbed1-2.fna.fbcdn.net/v/t1.0-9/64684687_2333630296895861_5872444732973514752_n.jpg?_nc_cat=102&_nc_sid=85a577&_nc_ohc=pgLUNvQ2xSsAX-pPIC6&_nc_ht=scontent.fbed1-2.fna&oh=2810edfff1773fb528360ce34c6e0bc2&oe=5E8F0331"
+        alt="A picture of me">
+    <h2>Student at University of Massachusetts Amherst || Computer Science and Economics</h2>
+    <h3><a href="https://www.linkedin.com/in/jpasquale1" target="_blank">LinkedIn</a> || <a
+            href="https://github.com/joepasquale" target="_blank">GitHub</a></h3>
+    <p>I am currently a Junior-Year Computer Science and Economics student at the University of Massachusetts Amherst. I
+        have taken numerous courses such as Algorithm Analysis, Human-Computer Interaction, Web Programming, Data
+        Science, Database Management, and many others.
+        <br>While I'm at school, I'm a brother of the Gamma Delta Chapter of Kappa Sigma. I currently sit on the
+        executive committee. You can learn more about us <a href="https://www.umasskappasig.com"
+            target="_blank">here</a>. I'm also involved in the UMass Dance Marathon for Baystate Children's Hosptial.
+        You can find my DonorDrive <a
+            href="https://events.dancemarathon.com/index.cfm?fuseaction=donorDrive.participant&participantID=614332">here</a>
+    <div class=""></div>
+    <br>If you're interested in asking me a question or contacting me, fill out the form below.
+    </p>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
+
+</body>
+
+</html>
