added bootstrap structure

--- a/index.html
+++ b/index.html
@@ -17,23 +17,36 @@
 </head>
 
 <body>
-    <h1>Joe Pasquale</h1>
-    <img src="https://scontent.fbed1-2.fna.fbcdn.net/v/t1.0-9/64684687_2333630296895861_5872444732973514752_n.jpg?_nc_cat=102&_nc_sid=85a577&_nc_ohc=pgLUNvQ2xSsAX-pPIC6&_nc_ht=scontent.fbed1-2.fna&oh=2810edfff1773fb528360ce34c6e0bc2&oe=5E8F0331"
-        alt="A picture of me">
-    <h2>Student at University of Massachusetts Amherst || Computer Science and Economics</h2>
-    <h3><a href="https://www.linkedin.com/in/jpasquale1" target="_blank">LinkedIn</a> || <a
-            href="https://github.com/joepasquale" target="_blank">GitHub</a></h3>
-    <p>I am currently a Junior-Year Computer Science and Economics student at the University of Massachusetts Amherst. I
-        have taken numerous courses such as Algorithm Analysis, Human-Computer Interaction, Web Programming, Data
-        Science, Database Management, and many others.
-        <br>While I'm at school, I'm a brother of the Gamma Delta Chapter of Kappa Sigma. I currently sit on the
-        executive committee. You can learn more about us <a href="https://www.umasskappasig.com"
-            target="_blank">here</a>. I'm also involved in the UMass Dance Marathon for Baystate Children's Hosptial.
-        You can find my DonorDrive <a
-            href="https://events.dancemarathon.com/index.cfm?fuseaction=donorDrive.participant&participantID=614332">here</a>
-    <div class=""></div>
-    <br>If you're interested in asking me a question or contacting me, fill out the form below.
-    </p>
+    <div class="container-md">
+        <div class="row">
+            <h1>Joe Pasquale</h1>
+        </div>
+        <div class="row">
+            <img src="https://scontent.fbed1-2.fna.fbcdn.net/v/t1.0-9/64684687_2333630296895861_5872444732973514752_n.jpg?_nc_cat=102&_nc_sid=85a577&_nc_ohc=pgLUNvQ2xSsAX-pPIC6&_nc_ht=scontent.fbed1-2.fna&oh=2810edfff1773fb528360ce34c6e0bc2&oe=5E8F0331"
+                alt="A picture of me">
+        </div>
+        <div class="row">
+            <h2>Student at University of Massachusetts Amherst || Computer Science and Economics</h2>
+        </div>
+        <div class="row">
+            <div class="col"><a href="https://www.linkedin.com/in/jpasquale1" target="_blank">LinkedIn</a></div>
+            <div class="col"><a href="https://github.com/joepasquale" target="_blank">GitHub</a></div>
+        </div>
+    </div>
+    <div class="container-lg">
+        <p>I am currently a Junior-Year Computer Science and Economics student at the University of Massachusetts
+            Amherst. I
+            have taken numerous courses such as Algorithm Analysis, Human-Computer Interaction, Web Programming, Data
+            Science, Database Management, and many others.
+            <br>While I'm at school, I'm a brother of the Gamma Delta Chapter of Kappa Sigma. I currently sit on the
+            executive committee. You can learn more about us <a href="https://www.umasskappasig.com"
+                target="_blank">here</a>. I'm also involved in the UMass Dance Marathon for Baystate Children's
+            Hosptial.
+            You can find my DonorDrive <a
+                href="https://events.dancemarathon.com/index.cfm?fuseaction=donorDrive.participant&participantID=614332">here</a>
+            <br>If you're interested in asking me a question or contacting me, fill out the form below.
+        </p>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
