--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 
     <style>
 
+        .center{
+            text-align: center;
+            align-content: center;
+            align-items: center;
+        }
+
     </style>
 
     <!-- Bootstrap -->
@@ -18,23 +24,24 @@
 
 <body>
     <div class="container-md">
-        <div class="row">
-            <h1>Joe Pasquale</h1>
+        <div class="row center">
+            <h1 class="center">Joe Pasquale</h1>
         </div>
-        <div class="row">
+        <div class="row center">
             <img src="https://scontent.fbed1-2.fna.fbcdn.net/v/t1.0-9/64684687_2333630296895861_5872444732973514752_n.jpg?_nc_cat=102&_nc_sid=85a577&_nc_ohc=pgLUNvQ2xSsAX-pPIC6&_nc_ht=scontent.fbed1-2.fna&oh=2810edfff1773fb528360ce34c6e0bc2&oe=5E8F0331"
                 alt="A picture of me">
         </div>
-        <div class="row">
-            <h2>Student at University of Massachusetts Amherst || Computer Science and Economics</h2>
+        <div class="row center">
+            <h2 class="center">Student at University of Massachusetts Amherst</h2>
+            <h2 class="center">Computer Science and Economics</h2>
         </div>
-        <div class="row">
+        <div class="row center">
             <div class="col"><a href="https://www.linkedin.com/in/jpasquale1" target="_blank">LinkedIn</a></div>
             <div class="col"><a href="https://github.com/joepasquale" target="_blank">GitHub</a></div>
         </div>
     </div>
     <div class="container-lg">
-        <p>I am currently a Junior-Year Computer Science and Economics student at the University of Massachusetts
+        <p>I am currently a Senior-Year Computer Science and Economics student at the University of Massachusetts
             Amherst. I
             have taken numerous courses such as Algorithm Analysis, Human-Computer Interaction, Web Programming, Data
             Science, Database Management, and many others.
