added pc specs, added toolbar

--- a/index.html
+++ b/index.html
@@ -4,35 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Joe Pasquale - GitHub.io</title>
-
-    <style>
-
-        .center{
-            text-align: center;
-            align-content: center;
-            align-items: center;
-        }
-
-    </style>
-
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="style.css">
+    
+    <title>Joe Pasquale - GitHub.io</title>
+
 </head>
 
 <body>
-    <div class="container-md">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse justify-content-md-center">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Projects</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Resume</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">More</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="#">Links</a>
+                        <a class="dropdown-item" href="#">Miscellaneous</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <div class="container-lg">
         <div class="row center">
             <h1 class="center">Joe Pasquale</h1>
         </div>
         <div class="row center">
-            <img src="https://scontent.fbed1-2.fna.fbcdn.net/v/t1.0-9/64684687_2333630296895861_5872444732973514752_n.jpg?_nc_cat=102&_nc_sid=85a577&_nc_ohc=pgLUNvQ2xSsAX-pPIC6&_nc_ht=scontent.fbed1-2.fna&oh=2810edfff1773fb528360ce34c6e0bc2&oe=5E8F0331"
-                alt="A picture of me">
+            <h2 class="center">Student at University of Massachusetts Amherst</h2>
         </div>
         <div class="row center">
-            <h2 class="center">Student at University of Massachusetts Amherst</h2>
             <h2 class="center">Computer Science and Economics</h2>
         </div>
         <div class="row center">
@@ -52,6 +67,39 @@
             You can find my DonorDrive <a
                 href="https://events.dancemarathon.com/index.cfm?fuseaction=donorDrive.participant&participantID=614332">here</a>
             <br>If you're interested in asking me a question or contacting me, fill out the form below.
+        </p>
+        <p>My Equipment:
+        <ul>
+            <li>Laptop: MacBook Pro 13", 2020
+                <ul>
+                    <li>Processor: 1.4 GHz Intel i5 8th Generation, 4 cores</li>
+                    <li>Memory: 8 GB 2133 MHz LPDDR3</li>
+                    <li>Graphics: Intel Iris Plus Graphics 645 1536 MB</li>
+                    <li>Storage: 256GB SSD</li>
+                    <li>Display: 2560x1600 Retina Display</li>
+                    <li>OS: macOS Catalina 10.15.5</li>
+                </ul>
+            </li>
+            <li>Desktop:
+                <ul>
+                    <li>Processor: 3.2 GHz AMD Ryzen 5 1600, 6 cores</li>
+                    <li>Cooling: Wraith Stealth Cooler</li>
+                    <li>Memory: 16 GB Ripjaw Series V 3200 Mhz DDR4</li>
+                    <li>Graphics: Zotac GeForce GTX 1060 6GB Mini</li>
+                    <li>Storage:
+                        <ul>
+                            <li>SSD: ADATA SU655 480GB</li>
+                            <li>HDD: HP MG03ACA400 4TB 64MB Cache 7200RPM SATA III 6.0Gb/s 3.5" Internal Enterprise Hard
+                                Drive</li>
+                        </ul>
+                    </li>
+                    <li>Motherboard: ASRock A320M</li>
+                    <li>Case: APEVIA White SECC Micro ATX Cube</li>
+                    <li>Display: 1080p AOC 21.5", x2</li>
+                    <li>OS: Windows 10 Education</li>
+                </ul>
+            </li>
+        </ul>
         </p>
     </div>
 
