added misc, projects pages

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
     <link rel="stylesheet" href="style.css">
-    
+
     <title>Joe Pasquale - GitHub.io</title>
 
 </head>
@@ -84,12 +84,12 @@
                 <ul>
                     <li>Processor: 3.2 GHz AMD Ryzen 5 1600, 6 cores</li>
                     <li>Cooling: Wraith Stealth Cooler</li>
-                    <li>Memory: 16 GB Ripjaw Series V 3200 Mhz DDR4</li>
+                    <li>Memory: 16 GB Ripjaw Series V 3200 MHz DDR4</li>
                     <li>Graphics: Zotac GeForce GTX 1060 6GB Mini</li>
                     <li>Storage:
                         <ul>
                             <li>SSD: ADATA SU655 480GB</li>
-                            <li>HDD: HP MG03ACA400 4TB 64MB Cache 7200RPM SATA III 6.0Gb/s 3.5" Internal Enterprise Hard
+                            <li>HDD: HP 4TB 64MB Cache 7200RPM SATA III 6.0Gb/s 3.5" Internal Enterprise Hard
                                 Drive</li>
                         </ul>
                     </li>
