added box around links

--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
             <h2 class="center">Computer Science and Economics</h2>
         </div>
         <div class="row center">
-            <div class="col"><a href="https://www.linkedin.com/in/jpasquale1" target="_blank">LinkedIn</a></div>
-            <div class="col"><a href="https://github.com/joepasquale" target="_blank">GitHub</a></div>
+            <div class="col linkbox"><a href="https://www.linkedin.com/in/jpasquale1" target="_blank">LinkedIn</a></div>
+            <div class="col linkbox"><a href="https://github.com/joepasquale" target="_blank">GitHub</a></div>
         </div>
     </div>
-    <div class="container-lg">
+    <div class="container-lg textbox">
         <p>I am currently a Senior-Year Computer Science and Economics student at the University of Massachusetts
             Amherst. I
             have taken numerous courses such as Algorithm Analysis, Human-Computer Interaction, Web Programming, Data
