updated styling and added social links

--- a/index.html
+++ b/index.html
@@ -41,33 +41,47 @@
         </div>
     </nav>
     <div class="container-lg">
-        <div class="row center">
-            <h1 class="center">Joe Pasquale</h1>
+        <div class="textbox center">
+                <h1 class="center">Joe Pasquale</h1>
+                <img src="">
+                <h3 class="center">Student at University of Massachusetts Amherst</h3>
+                <h3 class="center">Computer Science and Economics</h3>
         </div>
-        <div class="row center">
-            <h2 class="center">Student at University of Massachusetts Amherst</h2>
-        </div>
-        <div class="row center">
-            <h2 class="center">Computer Science and Economics</h2>
-        </div>
-        <div class="row center">
-            <div class="col linkbox"><a href="https://www.linkedin.com/in/jpasquale1" target="_blank">LinkedIn</a></div>
-            <div class="col linkbox"><a href="https://github.com/joepasquale" target="_blank">GitHub</a></div>
+        <!--Linkbox-->
+        <div>
+            <div class="row center">
+                <div class="col linkbox"><a class="social_link" href="https://www.linkedin.com/in/jpasquale1"
+                        target="_blank">LinkedIn</a></div>
+                <div class="col linkbox"><a class="social_link" href="https://github.com/joepasquale"
+                        target="_blank">GitHub</a></div>
+                <div class="col linkbox"><a class="social_link" href="https://spoti.fi/2IjMkgo"
+                        target="_blank">Spotify</a></div>
+            </div>
+            <div class="row center">
+                <div class="col linkbox"><a class="social_link" href="https://www.instagram.com/joepasquale1"
+                        target="_blank">Instagram</a></div>
+                <div class="col linkbox"><a class="social_link" href="https://www.twitter.com/josecanyousi"
+                        target="_blank">Twitter</a></div>
+            </div>
         </div>
     </div>
     <div class="container-lg textbox">
         <p>I am currently a Senior-Year Computer Science and Economics student at the University of Massachusetts
             Amherst. I
             have taken numerous courses such as Algorithm Analysis, Human-Computer Interaction, Web Programming, Data
-            Science, Database Management, and many others.
+            Science, Database Management, and many others. My primary interests lie in the intersection of finance and
+            computer science; ideally, after graduation, I would like to be working on an ERP database system or be a
+            data analyst at a financial firm.
             <br>While I'm at school, I'm a brother of the Gamma Delta Chapter of Kappa Sigma. I currently sit on the
-            executive committee. You can learn more about us <a href="https://www.umasskappasig.com"
-                target="_blank">here</a>. I'm also involved in the UMass Dance Marathon for Baystate Children's
+            executive committee, holding the position of Grand Scribe. You can learn more about us <a
+                href="https://www.umasskappasig.com" target="_blank">here</a>. I'm also involved in the UMass Dance
+            Marathon for Baystate Children's
             Hosptial.
             You can find my DonorDrive <a
                 href="https://events.dancemarathon.com/index.cfm?fuseaction=donorDrive.participant&participantID=614332">here</a>
-            <br>If you're interested in asking me a question or contacting me, fill out the form below.
-        </p>
+            if you'd like to donate.
+            <br>
+            More content being added! </p>
         <p>My Equipment:
         <ul>
             <li>Laptop: MacBook Pro 13", 2020
