added image to homepage

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="container-lg">
         <div class="textbox center">
                 <h1 class="center">Joe Pasquale</h1>
-                <img src="">
+                <img id="composite" src="./img/composite-2019.jpg">
                 <h3 class="center">Student at University of Massachusetts Amherst</h3>
                 <h3 class="center">Computer Science and Economics</h3>
         </div>
