--- a/index.html
+++ b/index.html
@@ -42,90 +42,96 @@
     </nav>
     <div class="container-lg">
         <div class="textbox center">
-                <h1 class="center">Joe Pasquale</h1>
-                <img id="composite" src="./img/composite-2019.jpg">
-                <h3 class="center">Student at University of Massachusetts Amherst</h3>
-                <h3 class="center">Computer Science and Economics</h3>
+            <h1 class="center">Joe Pasquale</h1>
+            <img id="composite" src="./img/composite-2019.jpg">
+            <h3 class="center">Student at University of Massachusetts Amherst</h3>
+            <h3 class="center">Computer Science and Economics</h3>
         </div>
         <!--Linkbox-->
         <div>
-            <div class="row center">
-                <div class="col linkbox"><a class="social_link" href="https://www.linkedin.com/in/jpasquale1"
-                        target="_blank">LinkedIn</a></div>
-                <div class="col linkbox"><a class="social_link" href="https://github.com/joepasquale"
-                        target="_blank">GitHub</a></div>
-                <div class="col linkbox"><a class="social_link" href="https://spoti.fi/2IjMkgo"
-                        target="_blank">Spotify</a></div>
-            </div>
-            <div class="row center">
-                <div class="col linkbox"><a class="social_link" href="https://www.instagram.com/joepasquale1"
-                        target="_blank">Instagram</a></div>
-                <div class="col linkbox"><a class="social_link" href="https://www.twitter.com/josecanyousi"
-                        target="_blank">Twitter</a></div>
+            <div>
+                <div class="row center">
+                    <div class="col"><a href="https://linkedin.com/in/jpasquale1" target="_blank"><button
+                                class="linkbox social_link">LinkedIn</button></a></div>
+
+                    <div class="col"><a href="https://github.com/joepasquale" target="_blank"><button
+                                class="linkbox social_link">GitHub</button></a></div>
+
+                    <div class="col"><a href="https://spoti.fi/2IjMkgo" target="_blank"><button
+                                class="linkbox social_link">Spotify</button></a></div>
+                </div>
+                <div class="row center">
+                    <div class="col"><a href="https://instagram.com/joepasquale1" target="_blank"><button
+                                class="linkbox social_link">Instagram</button></a></div>
+                    <div class="col"><a href="https://twitter.com/josecanyousi" target="_blank"><button
+                                class="linkbox social_link">LinkedIn</button></a></div>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="container-lg textbox">
-        <p>I am currently a Senior-Year Computer Science and Economics student at the University of Massachusetts
-            Amherst. I
-            have taken numerous courses such as Algorithm Analysis, Human-Computer Interaction, Web Programming, Data
-            Science, Database Management, and many others. My primary interests lie in the intersection of finance and
-            computer science; ideally, after graduation, I would like to be working on an ERP database system or be a
-            data analyst at a financial firm.
-            <br>While I'm at school, I'm a brother of the Gamma Delta Chapter of Kappa Sigma. I currently sit on the
-            executive committee, holding the position of Grand Scribe. You can learn more about us <a
-                href="https://www.umasskappasig.com" target="_blank">here</a>. I'm also involved in the UMass Dance
-            Marathon for Baystate Children's
-            Hosptial.
-            You can find my DonorDrive <a
-                href="https://events.dancemarathon.com/index.cfm?fuseaction=donorDrive.participant&participantID=614332">here</a>
-            if you'd like to donate.
-            <br>
-            More content being added! </p>
-        <p>My Equipment:
-        <ul>
-            <li>Laptop: MacBook Pro 13", 2020
-                <ul>
-                    <li>Processor: 1.4 GHz Intel i5 8th Generation, 4 cores</li>
-                    <li>Memory: 8 GB 2133 MHz LPDDR3</li>
-                    <li>Graphics: Intel Iris Plus Graphics 645 1536 MB</li>
-                    <li>Storage: 256GB SSD</li>
-                    <li>Display: 2560x1600 Retina Display</li>
-                    <li>OS: macOS Catalina 10.15.5</li>
-                </ul>
-            </li>
-            <li>Desktop:
-                <ul>
-                    <li>Processor: 3.2 GHz AMD Ryzen 5 1600, 6 cores</li>
-                    <li>Cooling: Wraith Stealth Cooler</li>
-                    <li>Memory: 16 GB Ripjaw Series V 3200 MHz DDR4</li>
-                    <li>Graphics: Zotac GeForce GTX 1060 6GB Mini</li>
-                    <li>Storage:
-                        <ul>
-                            <li>SSD: ADATA SU655 480GB</li>
-                            <li>HDD: HP 4TB 64MB Cache 7200RPM SATA III 6.0Gb/s 3.5" Internal Enterprise Hard
-                                Drive</li>
-                        </ul>
-                    </li>
-                    <li>Motherboard: ASRock A320M</li>
-                    <li>Case: APEVIA White SECC Micro ATX Cube</li>
-                    <li>Display: 1080p AOC 21.5", x2</li>
-                    <li>OS: Windows 10 Education</li>
-                </ul>
-            </li>
-        </ul>
-        </p>
-    </div>
+        <div class="container-lg textbox">
+            <p>I am currently a Senior-Year Computer Science and Economics student at the University of Massachusetts
+                Amherst. I
+                have taken numerous courses such as Algorithm Analysis, Human-Computer Interaction, Web Programming,
+                Data
+                Science, Database Management, and many others. My primary interests lie in the intersection of finance
+                and
+                computer science; ideally, after graduation, I would like to be working on an ERP database system or be
+                a
+                data analyst at a financial firm.
+                <br>While I'm at school, I'm a brother of the Gamma Delta Chapter of Kappa Sigma. I currently sit on the
+                executive committee, holding the position of Grand Scribe. You can learn more about us <a
+                    href="https://www.umasskappasig.com" target="_blank">here</a>. I'm also involved in the UMass Dance
+                Marathon for Baystate Children's
+                Hosptial.
+                You can find my DonorDrive <a
+                    href="https://events.dancemarathon.com/index.cfm?fuseaction=donorDrive.participant&participantID=614332">here</a>
+                if you'd like to donate.
+                <br>
+                More content being added! </p>
+            <p>My Equipment:
+            <ul>
+                <li>Laptop: MacBook Pro 13", 2020
+                    <ul>
+                        <li>Processor: 1.4 GHz Intel i5 8th Generation, 4 cores</li>
+                        <li>Memory: 8 GB 2133 MHz LPDDR3</li>
+                        <li>Graphics: Intel Iris Plus Graphics 645 1536 MB</li>
+                        <li>Storage: 256GB SSD</li>
+                        <li>Display: 2560x1600 Retina Display</li>
+                        <li>OS: macOS Catalina 10.15.5</li>
+                    </ul>
+                </li>
+                <li>Desktop:
+                    <ul>
+                        <li>Processor: 3.2 GHz AMD Ryzen 5 1600, 6 cores</li>
+                        <li>Cooling: Wraith Stealth Cooler</li>
+                        <li>Memory: 16 GB Ripjaw Series V 3200 MHz DDR4</li>
+                        <li>Graphics: Zotac GeForce GTX 1060 6GB Mini</li>
+                        <li>Storage:
+                            <ul>
+                                <li>SSD: ADATA SU655 480GB</li>
+                                <li>HDD: HP 4TB 64MB Cache 7200RPM SATA III 6.0Gb/s 3.5" Internal Enterprise Hard
+                                    Drive</li>
+                            </ul>
+                        </li>
+                        <li>Motherboard: ASRock A320M</li>
+                        <li>Case: APEVIA White SECC Micro ATX Cube</li>
+                        <li>Display: 1080p AOC 21.5", x2</li>
+                        <li>OS: Windows 10 Education</li>
+                    </ul>
+                </li>
+            </ul>
+            </p>
+        </div>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-        crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+            integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+            crossorigin="anonymous"></script>
 
 </body>
 
