--- a/index.html
+++ b/index.html
@@ -15,27 +15,26 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false"
-            aria-label="Toggle navigation">
+    <nav class="navbar navbar-dark bg-dark">
+        <a class="navbar-brand" href="#"></a>
+        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbar_data"
+            aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse justify-content-md-center">
-            <ul class="navbar-nav">
+        <div class="navbar-collapse collapse" id="navbar_data">
+            <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Projects</a>
+                    <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Resume</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="./projects.html">Projects</a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false">More</a>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Links</a>
-                        <a class="dropdown-item" href="#">Miscellaneous</a>
-                    </div>
+                <li class="nav-item">
+                    <a class="nav-link" href="./resume.html">Resume</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./misc.html">Miscellaneous</a>
                 </li>
             </ul>
         </div>
