--- a/index.html
+++ b/index.html
@@ -79,13 +79,7 @@
                 data analyst at a financial firm.
                 <br>While I'm at school, I'm a brother of the Gamma Delta Chapter of Kappa Sigma. I currently sit on the
                 executive committee, holding the position of Grand Scribe. You can learn more about us <a
-                    href="https://www.umasskappasig.com" target="_blank">here</a>. I'm also involved in the UMass Dance
-                Marathon for Baystate Children's
-                Hosptial.
-                You can find my DonorDrive <a
-                    href="https://events.dancemarathon.com/index.cfm?fuseaction=donorDrive.participant&participantID=614332">here</a>
-                if you'd like to donate.
-                <br>
+                    href="https://www.umasskappasig.com" target="_blank">here</a>.
                 More content being added! </p>
             <p>My Equipment:
             <ul>
@@ -121,6 +115,12 @@
             </ul>
             </p>
         </div>
+
+        <footer class="footer bg-dark py-3">
+            <div class="container-lg">
+                <span class="text-muted">Copyright Joseph Pasquale 2020</span>
+            </div>
+        </footer>
 
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
