--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <div class="col"><a href="https://instagram.com/joepasquale1" target="_blank"><button
                                 class="linkbox social_link">Instagram</button></a></div>
                     <div class="col"><a href="https://twitter.com/josecanyousi" target="_blank"><button
-                                class="linkbox social_link">LinkedIn</button></a></div>
+                                class="linkbox social_link">Twitter</button></a></div>
                 </div>
             </div>
         </div>
@@ -81,39 +81,6 @@
                 executive committee, holding the position of Grand Scribe. You can learn more about us <a
                     href="https://www.umasskappasig.com" target="_blank">here</a>.
                 More content being added! </p>
-            <p>My Equipment:
-            <ul>
-                <li>Laptop: MacBook Pro 13", 2020
-                    <ul>
-                        <li>Processor: 1.4 GHz Intel i5 8th Generation, 4 cores</li>
-                        <li>Memory: 8 GB 2133 MHz LPDDR3</li>
-                        <li>Graphics: Intel Iris Plus Graphics 645 1536 MB</li>
-                        <li>Storage: 256GB SSD</li>
-                        <li>Display: 2560x1600 Retina Display</li>
-                        <li>OS: macOS Catalina 10.15.5</li>
-                    </ul>
-                </li>
-                <li>Desktop:
-                    <ul>
-                        <li>Processor: 3.2 GHz AMD Ryzen 5 1600, 6 cores</li>
-                        <li>Cooling: Wraith Stealth Cooler</li>
-                        <li>Memory: 16 GB Ripjaw Series V 3200 MHz DDR4</li>
-                        <li>Graphics: Zotac GeForce GTX 1060 6GB Mini</li>
-                        <li>Storage:
-                            <ul>
-                                <li>SSD: ADATA SU655 480GB</li>
-                                <li>HDD: HP 4TB 64MB Cache 7200RPM SATA III 6.0Gb/s 3.5" Internal Enterprise Hard
-                                    Drive</li>
-                            </ul>
-                        </li>
-                        <li>Motherboard: ASRock A320M</li>
-                        <li>Case: APEVIA White SECC Micro ATX Cube</li>
-                        <li>Display: 1080p AOC 21.5", x2</li>
-                        <li>OS: Windows 10 Education</li>
-                    </ul>
-                </li>
-            </ul>
-            </p>
         </div>
 
         <footer class="footer bg-dark py-3">
