--- a/projects.html
+++ b/projects.html
@@ -40,6 +40,12 @@
         </div>
     </nav>
 
+    <div class="container-lg">
+        <div class="row center">
+            <h1>Projects</h1>
+        </div>
+    </div>
+
     <footer class="footer bg-dark py-3">
         <div class="container-lg">
             <span class="text-muted">Copyright Joseph Pasquale 2020</span>
