reorganized html files into folder

--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 
     <title>Joe Pasquale - GitHub.io</title>
 
@@ -42,7 +42,7 @@
     <div class="container-lg">
         <div class="textbox center">
             <h1 class="center">Joe Pasquale</h1>
-            <img id="composite" src="./img/composite-2019.jpg">
+            <img id="composite" src="../img/composite-2019.jpg">
             <h3 class="center">Student at University of Massachusetts Amherst</h3>
             <h3 class="center">Computer Science and Economics</h3>
         </div>
