added reddit button, fixed footer

--- a/html/index.html
+++ b/html/index.html
@@ -48,23 +48,23 @@
         </div>
         <!--Linkbox-->
         <div>
-            <div>
-                <div class="row center">
-                    <div class="col"><a href="https://linkedin.com/in/jpasquale1" target="_blank"><button
-                                class="linkbox social_link">LinkedIn</button></a></div>
+            <div class="row center">
+                <div class="col"><a href="https://linkedin.com/in/jpasquale1" target="_blank"><button
+                            class="linkbox social_link">LinkedIn</button></a></div>
 
-                    <div class="col"><a href="https://github.com/joepasquale" target="_blank"><button
-                                class="linkbox social_link">GitHub</button></a></div>
+                <div class="col"><a href="https://github.com/joepasquale" target="_blank"><button
+                            class="linkbox social_link">GitHub</button></a></div>
 
-                    <div class="col"><a href="https://spoti.fi/2IjMkgo" target="_blank"><button
-                                class="linkbox social_link">Spotify</button></a></div>
-                </div>
-                <div class="row center">
-                    <div class="col"><a href="https://instagram.com/joepasquale1" target="_blank"><button
-                                class="linkbox social_link">Instagram</button></a></div>
-                    <div class="col"><a href="https://twitter.com/josecanyousi" target="_blank"><button
-                                class="linkbox social_link">Twitter</button></a></div>
-                </div>
+                <div class="col"><a href="https://spoti.fi/2IjMkgo" target="_blank"><button
+                            class="linkbox social_link">Spotify</button></a></div>
+            </div>
+            <div class="row center">
+                <div class="col"><a href="https://instagram.com/joepasquale1" target="_blank"><button
+                            class="linkbox social_link">Instagram</button></a></div>
+                <div class="col"><a href="https://reddit.com/u/joepasquale" target="_blank"><button
+                            class="linkbox social_link">Reddit</button></a></div>
+                <div class="col"><a href="https://twitter.com/josecanyousi" target="_blank"><button
+                            class="linkbox social_link">Twitter</button></a></div>
             </div>
         </div>
         <div class="container-lg textbox">
@@ -83,9 +83,11 @@
                 More content being added! </p>
         </div>
 
-        <footer class="footer bg-dark py-3">
-            <div class="container-lg">
-                <span class="text-muted">Copyright Joseph Pasquale 2020</span>
+        <footer class="page-footer">
+            <div class="footer-copyright">
+                <div class="container text-center text-muted">
+                    © 2020 Joseph Pasquale
+                </div>
             </div>
         </footer>
 
