--- a/html/resume.html
+++ b/html/resume.html
@@ -40,9 +40,11 @@
         </div>
     </nav>
 
-    <footer class="footer bg-dark py-3">
-        <div class="container-lg">
-            <span class="text-muted">Copyright Joseph Pasquale 2020</span>
+    <footer class="page-footer">
+        <div class="footer-copyright">
+            <div class="container text-center text-muted">
+                © 2020 Joseph Pasquale
+            </div>
         </div>
     </footer>
 
