--- a/html/misc.html
+++ b/html/misc.html
@@ -77,9 +77,12 @@
         </li>
     </ul>
     </p>
-    <footer class="footer bg-dark py-3">
-        <div class="container-lg">
-            <span class="text-muted">Copyright Joseph Pasquale 2020</span>
+
+    <footer class="page-footer">
+        <div class="footer-copyright">
+            <div class="container text-center text-muted">
+                © 2020 Joseph Pasquale
+            </div>
         </div>
     </footer>
 
