moved index back out of html folder, fixed navbar
github pages won't load the index page if it's inside the html folder

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
 
     <title>Joe Pasquale - GitHub.io</title>
 
@@ -25,16 +25,16 @@
         <div class="navbar-collapse collapse" id="navbar_data">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./projects.html">Projects</a>
+                    <a class="nav-link" href="./html/projects.html">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./resume.html">Resume</a>
+                    <a class="nav-link" href="./html/resume.html">Resume</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./misc.html">Miscellaneous</a>
+                    <a class="nav-link" href="./html/misc.html">Miscellaneous</a>
                 </li>
             </ul>
         </div>
@@ -42,7 +42,7 @@
     <div class="container-lg">
         <div class="textbox center">
             <h1 class="center">Joe Pasquale</h1>
-            <img id="composite" src="../img/composite-2019.jpg">
+            <img id="composite" src="./img/composite-2019.jpg">
             <h3 class="center">Student at University of Massachusetts Amherst</h3>
             <h3 class="center">Computer Science and Economics</h3>
         </div>
