fixed navbar links

--- a/html/misc.html
+++ b/html/misc.html
@@ -25,58 +25,60 @@
         <div class="navbar-collapse collapse" id="navbar_data">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./projects.html">Projects</a>
+                    <a class="nav-link" href="./html/projects.html">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./resume.html">Resume</a>
+                    <a class="nav-link" href="./html/resume.html">Resume</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./misc.html">Miscellaneous</a>
+                    <a class="nav-link" href="./html/misc.html">Miscellaneous</a>
                 </li>
             </ul>
         </div>
     </nav>
     <div class="container-lg">
-        <div class="row center">
+        <div class="row text-center">
             <h1>Miscellaneous</h1>
         </div>
     </div>
-    <p>My Equipment:
-    <ul>
-        <li>Laptop: MacBook Pro 13", 2020
-            <ul>
-                <li>Processor: 1.4 GHz Intel i5 8th Generation, 4 cores</li>
-                <li>Memory: 8 GB 2133 MHz LPDDR3</li>
-                <li>Graphics: Intel Iris Plus Graphics 645 1536 MB</li>
-                <li>Storage: 256GB SSD</li>
-                <li>Display: 2560x1600 Retina Display</li>
-                <li>OS: macOS Catalina 10.15.5</li>
-            </ul>
-        </li>
-        <li>Desktop:
-            <ul>
-                <li>Processor: 3.2 GHz AMD Ryzen 5 1600, 6 cores</li>
-                <li>Cooling: Wraith Stealth Cooler</li>
-                <li>Memory: 16 GB Ripjaw Series V 3200 MHz DDR4</li>
-                <li>Graphics: Zotac GeForce GTX 1060 6GB Mini</li>
-                <li>Storage:
-                    <ul>
-                        <li>SSD: ADATA SU655 480GB</li>
-                        <li>HDD: HP 4TB 64MB Cache 7200RPM SATA III 6.0Gb/s 3.5" Internal Enterprise Hard
-                            Drive</li>
-                    </ul>
-                </li>
-                <li>Motherboard: ASRock A320M</li>
-                <li>Case: APEVIA White SECC Micro ATX Cube</li>
-                <li>Display: 1080p AOC 21.5", x2</li>
-                <li>OS: Windows 10 Education</li>
-            </ul>
-        </li>
-    </ul>
-    </p>
+    <div>
+        <p>My Equipment:
+        <ul>
+            <li>Laptop: MacBook Pro 13", 2020
+                <ul>
+                    <li>Processor: 1.4 GHz Intel i5 8th Generation, 4 cores</li>
+                    <li>Memory: 8 GB 2133 MHz LPDDR3</li>
+                    <li>Graphics: Intel Iris Plus Graphics 645 1536 MB</li>
+                    <li>Storage: 256GB SSD</li>
+                    <li>Display: 2560x1600 Retina Display</li>
+                    <li>OS: macOS Catalina 10.15.5</li>
+                </ul>
+            </li>
+            <li>Desktop:
+                <ul>
+                    <li>Processor: 3.2 GHz AMD Ryzen 5 1600, 6 cores</li>
+                    <li>Cooling: Wraith Stealth Cooler</li>
+                    <li>Memory: 16 GB Ripjaw Series V 3200 MHz DDR4</li>
+                    <li>Graphics: Zotac GeForce GTX 1060 6GB Mini</li>
+                    <li>Storage:
+                        <ul>
+                            <li>SSD: ADATA SU655 480GB</li>
+                            <li>HDD: HP 4TB 64MB Cache 7200RPM SATA III 6.0Gb/s 3.5" Internal Enterprise Hard
+                                Drive</li>
+                        </ul>
+                    </li>
+                    <li>Motherboard: ASRock A320M</li>
+                    <li>Case: APEVIA White SECC Micro ATX Cube</li>
+                    <li>Display: 1080p AOC 21.5", x2</li>
+                    <li>OS: Windows 10 Education</li>
+                </ul>
+            </li>
+        </ul>
+        </p>
+    </div>
 
     <footer class="page-footer">
         <div class="footer-copyright">
