--- a/html/projects.html
+++ b/html/projects.html
@@ -25,16 +25,16 @@
         <div class="navbar-collapse collapse" id="navbar_data">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./projects.html">Projects</a>
+                    <a class="nav-link" href="./html/projects.html">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./resume.html">Resume</a>
+                    <a class="nav-link" href="./html/resume.html">Resume</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./misc.html">Miscellaneous</a>
+                    <a class="nav-link" href="./html/misc.html">Miscellaneous</a>
                 </li>
             </ul>
         </div>
