--- a/html/resume.html
+++ b/html/resume.html
@@ -28,13 +28,13 @@
                     <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./html/projects.html">Projects</a>
+                    <a class="nav-link" href="./projects.html">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./html/resume.html">Resume</a>
+                    <a class="nav-link" href="./resume.html">Resume</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./html/misc.html">Miscellaneous</a>
+                    <a class="nav-link" href="./misc.html">Miscellaneous</a>
                 </li>
             </ul>
         </div>
