--- a/html/misc.html
+++ b/html/misc.html
@@ -40,8 +40,8 @@
         </div>
     </nav>
     <div class="container-lg">
-        <div class="row text-center">
-            <h1>Miscellaneous</h1>
+        <div class="row center">
+            <h1 class="text-center">Miscellaneous</h1>
         </div>
     </div>
     <div>
