--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h1 class="center">Joe Pasquale</h1>
             <img id="composite" src="./img/composite-2019.jpg">
             <h3 class="center">Student at University of Massachusetts Amherst</h3>
-            <h3 class="center">Computer Science and Economics</h3>
+            <h3 class="center">B.S., Computer Science and Economics, May 2021</h3>
         </div>
         <!--Linkbox-->
         <div>
