added project box, added shelf to projects page

--- a/html/projects.html
+++ b/html/projects.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 
     <title>Joe Pasquale - Projects</title>
 
@@ -40,9 +40,45 @@
         </div>
     </nav>
 
-    <div class="container-lg">
+    <div class="container">
         <div class="row center">
-            <h1>Projects</h1>
+            <h1 class="text-center">Projects</h1>
+        </div>
+    </div>
+    <div class="container">
+        <div class="project-container">
+            <div class="row">
+                <div class="col">
+                    <img src="../img/shelf-logo.png" style="padding-top:25px;"
+                        alt="shelf logo">
+                </div>
+                <div class="col">
+                    <div class="row">
+                        <h2>Shelf</h2>
+                    </div>
+                    <div class="row">
+                        <p>Shelf is a website which allows a user to sign up and store books that they are currently
+                            reading,
+                            have read, or plan to read. They can search for books which are fetched from the Google
+                            Books API, which will return basic information about the book, such as title, author, and
+                            publisher, as well as more detailed information, such as cover art and Google Books rating.
+                            Users are able to add reviews and ratings to books. Users can share their "shelves" with
+                            other people when they add them as a friend, and they can comment on activity from members
+                            of their friends list, which show up in a feed. This was done with Daniel Coley and Josh
+                            Vasilevsky, my two other team members in COMPSCI 326 at UMass.</p>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <a href="https://shelf-book-app.herokuapp.com/" target="_blank"><button
+                                    class="linkbox">Access via Heroku</button></a>
+                        </div>
+                        <div class="col">
+                            <a href="https://github.com/joepasquale/326-final-sigma/" target="_blank"><button
+                                    class="linkbox">GitHub</button></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
