fixed css alignment for project box

--- a/html/projects.html
+++ b/html/projects.html
@@ -40,21 +40,24 @@
         </div>
     </nav>
 
-    <div class="container">
-        <div class="row center">
-            <h1 class="text-center">Projects</h1>
+    <div class="container" style="padding-top:10px;">
+        <div class="row">
+            <div class="col center">
+                <h1>Projects</h1>
+            </div>
         </div>
     </div>
     <div class="container">
         <div class="project-container">
             <div class="row">
-                <div class="col">
-                    <img src="../img/shelf-logo.png" style="padding-top:25px;"
-                        alt="shelf logo">
+                <div class="col center">
+                    <img src="../img/shelf-logo.png" alt="shelf logo">
                 </div>
                 <div class="col">
                     <div class="row">
-                        <h2>Shelf</h2>
+                        <div class="col center">
+                            <h2>Shelf</h2>
+                        </div>
                     </div>
                     <div class="row">
                         <p>Shelf is a website which allows a user to sign up and store books that they are currently
@@ -68,11 +71,11 @@
                             Vasilevsky, my two other team members in COMPSCI 326 at UMass.</p>
                     </div>
                     <div class="row">
-                        <div class="col">
+                        <div class="col center">
                             <a href="https://shelf-book-app.herokuapp.com/" target="_blank"><button
                                     class="linkbox">Access via Heroku</button></a>
                         </div>
-                        <div class="col">
+                        <div class="col center">
                             <a href="https://github.com/joepasquale/326-final-sigma/" target="_blank"><button
                                     class="linkbox">GitHub</button></a>
                         </div>
