--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </ul>
         </div>
     </nav>
-    <div class="container-lg">
+    <div class="container-fluid">
         <div class="textbox center">
             <h1 class="center">Joe Pasquale</h1>
             <img id="composite" src="./img/composite-2019.jpg">
@@ -67,7 +67,7 @@
                             class="linkbox social_link">Twitter</button></a></div>
             </div>
         </div>
-        <div class="container-lg textbox">
+        <div class="container-fluid textbox">
             <p>I am currently a Senior-Year Computer Science and Economics student at the University of Massachusetts
                 Amherst. I
                 have taken numerous courses such as Algorithm Analysis, Human-Computer Interaction, Web Programming,
