--- a/html/resume.html
+++ b/html/resume.html
@@ -16,7 +16,7 @@
 
 <body>
     <nav class="navbar navbar-dark bg-dark">
-        <a class="navbar-brand" href="#"></a>
+        <a class="navbar-brand" href="#">Joe Pasquale</a>
         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbar_data"
             aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
